--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Flask==2.2.3
 Flask-Babel==2.0.0
 Flask-SQLAlchemy==2.5.1
+# if this does not work then use this version of flask-sqlalchemy
+# Flask-SQLAlchemy==3.1.1
 Werkzeug==2.2.3
 requests==2.28.1
